starting the html structure

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local Legends</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Local Legends</title>
+  <link rel="stylesheet" href="styles/styles.css"/>
+  <link rel="stylesheet" href="styles/normalize-fwd.css"/>
 </head>
 <body>
-    
+  <header>
+    <h1>Local Legends of Richmond</h1>
+    <p>Celebrating creativity, community, and small business magic.</p>
+  </header>
+
+  <section class="cards">
+    <div class="card" data-theme="coffee">
+      <h2>Ronacini Roasters/h2>
+      <p>A cozy café blending floral vibes with artisan brews.</p>
+      <button>Visit Site</button>
+    </div>
+    <div class="card" data-theme="tattoo">
+      <h2>Steveston Tattoos</h2>
+      <p>Where stories come to life through bold, expressive tattoos.</p>
+      <button>Visit Site</button>
+    </div>
+    <div class="card" data-theme="bike">
+      <h2>Village Bikes</h2>
+      <p>Local bike shop keeping Richmond rolling with style and speed.</p>
+      <button>Visit Site</button>
+    </div>
+  </section>
+
+  <script src="scripts/app.js"></script>
 </body>
 </html>
