html structure good so far, brain storming a js features

--- a/index.html
+++ b/index.html
@@ -12,24 +12,34 @@
     <h1>Local Legends of Richmond</h1>
     <p>Celebrating creativity, community, and small business magic.</p>
   </header>
+<section class="cards">
+  <article class="card" data-theme="coffee">
+    <h2>Ronacini Roasters</h2>
+    <img src="images/coffee-shop.png" alt="Exterior of Ronacini Coffee Shop in Richmond" />
+    <p>A cozy café blending floral vibes with artisan brews.</p>
+    <a href="https://www.rocanini.com/pages/steveston-cafe" class="visit-btn">Visit Site</a>
+  </article>
 
-  <section class="cards">
-    <div class="card" data-theme="coffee">
-      <h2>Ronacini Roasters/h2>
-      <p>A cozy café blending floral vibes with artisan brews.</p>
-      <button>Visit Site</button>
+  <article class="card" data-theme="tattoo">
+    <h2>Steveston Tattoos</h2>
+    <img src="images/tattoo-shop.png" alt="Steveston Tattoo Shop exterior" />
+    <p>Where stories come to life through bold, expressive tattoos.</p>
+  <a href="https://stevestontattooco.com/" class="visit-btn" >Visit Site</a>
+  </article>
+
+  <article class="card" data-theme="bike">
+    <h2>Village Bikes</h2>
+    <img src="images/bike-shop.png" alt="Village Bike Shop storefront" />
+    <p>Local bike shop keeping Richmond rolling with style and speed.</p>
+  <a href="https://www.villagebikes.ca/" class="visit-btn" >Visit Site</a>
+  </article>
+</section>
+
+<footer>
+    <div class="footer-container">
+        <p class="founder">Crafted By Alen Villaluz</p>
     </div>
-    <div class="card" data-theme="tattoo">
-      <h2>Steveston Tattoos</h2>
-      <p>Where stories come to life through bold, expressive tattoos.</p>
-      <button>Visit Site</button>
-    </div>
-    <div class="card" data-theme="bike">
-      <h2>Village Bikes</h2>
-      <p>Local bike shop keeping Richmond rolling with style and speed.</p>
-      <button>Visit Site</button>
-    </div>
-  </section>
+</footer>
 
   <script src="scripts/app.js"></script>
 </body>
