--- a/index.html
+++ b/index.html
@@ -9,31 +9,38 @@
 </head>
 <body>
   <header>
-    <h1>Local Legends of Richmond</h1>
-    <p>Celebrating creativity, community, and small business magic.</p>
+    <div class="title-container">
+
+      <h1 class="title">Local Legends of Richmond</h1>
+      <p class="header-intro">Celebrating creativity, community, and small business magic.</p>
+    </div>
   </header>
-<section class="cards">
-  <article class="card" data-theme="coffee">
-    <h2>Ronacini Roasters</h2>
-    <img src="images/coffee-shop.png" alt="Exterior of Ronacini Coffee Shop in Richmond" />
-    <p>A cozy café blending floral vibes with artisan brews.</p>
-    <a href="https://www.rocanini.com/pages/steveston-cafe" class="visit-btn">Visit Site</a>
-  </article>
 
-  <article class="card" data-theme="tattoo">
-    <h2>Steveston Tattoos</h2>
-    <img src="images/tattoo-shop.png" alt="Steveston Tattoo Shop exterior" />
-    <p>Where stories come to life through bold, expressive tattoos.</p>
-  <a href="https://stevestontattooco.com/" class="visit-btn" >Visit Site</a>
-  </article>
+  <main>
 
-  <article class="card" data-theme="bike">
-    <h2>Village Bikes</h2>
-    <img src="images/bike-shop.png" alt="Village Bike Shop storefront" />
-    <p>Local bike shop keeping Richmond rolling with style and speed.</p>
-  <a href="https://www.villagebikes.ca/" class="visit-btn" >Visit Site</a>
-  </article>
-</section>
+    <section class="cards">
+      <article class="card" data-theme="coffee">
+        <h2 class="shop-name">Ronacini Roasters</h2>
+        <img class="shop-images" src="images/coffee-shop.png" alt="Exterior of Ronacini Coffee Shop in Richmond" />
+        <p class="motto">A cozy café blending floral vibes with artisan brews.</p>
+        <a href="https://www.rocanini.com/pages/steveston-cafe" class="visit-btn">Visit Site</a>
+      </article>
+    
+      <article class="card" data-theme="tattoo">
+        <h2 class="shop-name" >Steveston Tattoos</h2>
+        <img class="shop-images"  src="images/tattoo-shop.png" alt="Steveston Tattoo Shop exterior" />
+        <p  class="motto">Where stories come to life through bold, expressive tattoos.</p>
+      <a href="https://stevestontattooco.com/" class="visit-btn" >Visit Site</a>
+      </article>
+    
+      <article class="card" data-theme="bike">
+        <h2 class="shop-name">Village Bikes</h2>
+        <img  class="shop-images" src="images/bike-shop.png" alt="Village Bike Shop storefront" />
+        <p  class="motto">Local bike shop keeping Richmond rolling with style and speed.</p>
+      <a href="https://www.villagebikes.ca/" class="visit-btn" >Visit Site</a>
+      </article>
+    </section>
+  </main>
 
 <footer>
     <div class="footer-container">
