added fonts, and done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Local Legends</title>
   <link rel="stylesheet" href="styles/styles.css"/>
   <link rel="stylesheet" href="styles/normalize-fwd.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Itim&family=Jura:wght@300..700&family=Oswald:wght@200..700&family=Ubuntu&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Itim&family=Jura:wght@700&family=Noto+Sans+KR:wght@100..900&family=Oswald:wght@200..700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -47,7 +53,7 @@
 <footer>
     <div class="footer-container">
    
-        <p class="founder">Crafted By Alen Villaluz</p>
+        <p class="founder">Crafted By <a class="portfolio" href="https://ajvillaluzdev.com/">Alen Villaluz</a></p>
     </div>
 </footer>
 
